Whoops, it's named this, now

--- a/dada/templates/edit_type_screen.tmpl
+++ b/dada/templates/edit_type_screen.tmpl
@@ -1,7 +1,7 @@
 <!-- begin edit_type_screen.tmpl -->
 
 
-<!-- tmpl_set name="title" value="Appearance &#187; Email Message Templates" -->
+<!-- tmpl_set name="title" value="Appearance &#187; Custom Mass Mailing Layout" -->
 <div id="screen_meta" data-menu_highlight="edit_type"></div>
 
 <div class="row hide-for-small-only" id="control_panel_breadcrumbs">
@@ -14,7 +14,7 @@
 				href="#"
 				class="current"
 			>	
-				Email Message Templates
+				Custom Mass Mailing Layout
 			</a>
 		</nav>
 	</div>
