privacy policies are now versioned, and are tied to a the start of the consent workflow.

--- a/dada/templates/subscription_form_widget.tmpl
+++ b/dada/templates/subscription_form_widget.tmpl
@@ -179,6 +179,7 @@
 			<div class="large-8 medium-8 columns">
 						<input 
 							type="submit" 
+							name="submit_button"
 							value="Subscribe" 
 							class="button success expand" 
 							id="ddm_subscribe_button"
