Oh look, consent history is now reported. *glee*

--- a/dada/templates/membership_screen.tmpl
+++ b/dada/templates/membership_screen.tmpl
@@ -398,7 +398,9 @@
 				</div>
 			</div>
 		<!-- /tmpl_if --> 
-
+		<pre>
+			<!-- tmpl_var consent_history_str escape="HTML" -->
+		</pre>
 		<div id="mailing_list_history_loading"></div>
 		<div id="mailing_list_history"></div>
 
