--- a/dada/templates/list_privacy_policy.tmpl
+++ b/dada/templates/list_privacy_policy.tmpl
@@ -1,10 +1,14 @@
 <!-- begin list_privacy_policy.tmpl -->
 
 <h1>Privacy Policy for, <!-- tmpl_var list_settings.list_name --></h1>
-<p>
+<p style="text-align:right">
 	<em>
-		Last Updated: <!-- tmpl_var privacy_policy_date -->
+		Last Saved: <!-- tmpl_var privacy_policy_date -->
 	</em>	
+</p>
+<div class="panel">
+<p>
 	<!-- tmpl_var saved_privacy_policy -->
 </p>
+</div>
 <!-- end list_privacy_policy.tmpl -->
