--- a/dada/templates/manage_list_consent.tmpl
+++ b/dada/templates/manage_list_consent.tmpl
@@ -28,6 +28,24 @@
 <!-- tmpl_if done -->
 	<!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->
 <!--/tmpl_if-->
+	
+    <div class="alert-box info radius">
+	  <p>
+		  <strong>
+			  How should I ask for consent on my mailing list? 
+		  </strong>
+		</p>
+		<p>
+			See the OCI's page, 
+			<a href="https://ico.org.uk/for-organisations/guide-to-the-general-data-protection-regulation-gdpr/lawful-basis-for-processing/consent/" target="_blank">
+				Guide to the General Data Protection Regulation (GDPR) Lawful basis for processing: Consent
+			</a>
+			for ideas and guidelines. 
+		</p>
+		
+    </div>
+	
+	
 
 
 		<fieldset> 
