--- a/dada/templates/manage_privacy_policy.tmpl
+++ b/dada/templates/manage_privacy_policy.tmpl
@@ -4,7 +4,7 @@
 
 
 <!-- tmpl_set name="title" value="Mailing List &#187; Manage Privacy Policy" -->
-<div id="screen_meta" data-menu_highlight="change_info"></div>
+<div id="screen_meta" data-menu_highlight="manage_privacy_policy"></div>
 
 
 <div class="row hide-for-small-only" id="control_panel_breadcrumbs">
@@ -26,6 +26,7 @@
 	</div>
 </div>
 
+<div id="manage_privacy_policy"></div> 
 
 <!-- tmpl_if done -->
 	<!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->
