--- a/dada/templates/new_list_created_screen.tmpl
+++ b/dada/templates/new_list_created_screen.tmpl
@@ -68,6 +68,18 @@
    
   </td>
  </tr>
+ 
+ <tr>
+  <td>
+    <strong>
+     Physical Address:
+    </strong>
+  </td>
+  <td>
+    <!-- tmpl_var physical_address  escape="HTML" -->  
+  </td>
+ </tr>
+
  <tr>
   <td>
    
@@ -82,20 +94,24 @@
    
   </td>
  </tr>
+ 
+
  <tr>
   <td>
    
     <strong>
-     Physical Address:
+     Consent:
     </strong>
    
   </td>
   <td>
    
-    <!-- tmpl_var physical_address  escape="HTML" -->
+    <!-- tmpl_var consent  escape="HTML" -->
    
   </td>
  </tr>
+
+ 
 </table>
 
 
