--- a/dada/templates/send_email_headers_widget.tmpl
+++ b/dada/templates/send_email_headers_widget.tmpl
@@ -3,6 +3,11 @@
 
 <div id="additional_email_headers">
 	
+	<!-- tmpl_if comment -->
+		<input type="hidden" name="from_phrase" id="from_phrase" value="">
+		<input type="hidden" name="to_phrase"   id="to_phrase"   value="">
+	<!-- /tmpl_if -->
+	
 	<div class="row">
 		<div class="large-1 columns">
 			<label for="Reply-To"  class="large-text-right">
