Get history reporting a bit better.

--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -799,6 +799,13 @@ $ADMIN_MENU = [
 #					},
 
 #					{
+#					-Title      => 'usage_log_to_consent_activity',
+#					-Title_URL  => $S_PROGRAM_URL."/plugins/usage_log_to_consent_activity",
+#					-Function   => 'usage_log_to_consent_activity',
+#					-Activated  => 0,
+#					},
+
+#					{
 #					-Title      => 'Multiple Subscribe',
 #					-Title_URL  => $EXT_URL."/multiple_subscribe.cgi",
 #					-Function   => 'multiple_subscribe',
