--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1004,6 +1004,21 @@
 			<input type="checkbox" name="install_global_config" id="install_global_config" value="1">
 			Global Configuration
 		</label> 
+		
+		
+		<label 
+			for="install_usage_log_to_consent_activity"
+		>
+			<input 
+				type="checkbox" 
+				name="install_usage_log_to_consent_activity" 
+				id="install_usage_log_to_consent_activity" 
+				value="1
+			">
+			usage_log_to_consent_activity
+		</label>
+		
+		
 
 		</fieldset>
 
