--- a/dada/templates/membership_screen.tmpl
+++ b/dada/templates/membership_screen.tmpl
@@ -363,51 +363,14 @@
 	</div>
 	
 	<div  class="content tab-title" id="subscriber_history_tab"> 
-		<!-- tmpl_if root_login -->
 		
-			<form id="toggle_membership_history"> 
-		
-			<input type="hidden" name="flavor" value="mailing_list_history" > 
-			<input type="hidden" name="mode"   value="export_csv" > 				
-			<input type="hidden" name="email"  value="<!-- tmpl_var email escape="HTML" -->" > 
-
-	
-			<div class="rows">
-				<div class="small-12 columns">
-					<input 
-						type="radio" 
-						id="membership_history_this_list" 
-						name="membership_history" 
-						value="this_list" 
-						class="radio_toggle_membership_history" 
-						checked="checked"
-					>
-					<label for="membership_history_this_list"> 
-						For <!-- tmpl_var list_settings.list_name --> (<!-- tmpl_var list_settings.list -->)
-					</label> 
-					<input 
-						type="radio" 
-						id="membership_history_all_lists" 
-						name="membership_history" 
-						class="radio_toggle_membership_history" 
-						value="all_lists"
-					>
-					<label for="membership_history_all_lists">
-						For All Mailing Lists
-					</label>
-				</div>
-			</div>
-		<!-- /tmpl_if --> 
-		<pre>
-			<!-- tmpl_var consent_history_str escape="HTML" -->
-		</pre>
 		<div id="mailing_list_history_loading"></div>
 		<div id="mailing_list_history"></div>
 
 		<div class="clearfix">
 			<ul class="button-group right">
 				<li>
-					<input type="submit" value="Export Subscriber History (csv)" class="success button" >
+					<input type="submit" value="Export Subscriber Activity (.csv)" class="success button" >
 				</li>
 			</ul>
 		</div>
@@ -426,7 +389,7 @@
 			<div class="clearfix">
 				<ul class="button-group right">
 					<li>
-						<input type="submit" value="Export Mailing List Activity (csv)" class="success button" >
+						<input type="submit" value="Export Mailing List Activity (.csv)" class="success button" >
 					</li>
 				</ul>
 			</div>
